# gtest_cmake_example

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/libfoo/: CMakeLists.txt  foo.cpp  foo.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  TestFoo.cpp  TestFoo.h
